# fablablib_python_ver1

./: LICENSE  README.md
FABLABLIB_PYTHON/: LICENSE  MANIFEST.in  README.md  setup.cfg
FABLABLIB_PYTHON/Example/: test_omron.py  test_opcua_thaiduong_vali.py  test_opcua_vtsauto_vali.py
FABLABLIB_PYTHON/fablablib_python_ver1/: ADC_fablab.py  DAC_fablab.py  FINS_fablab.py  LOG_data_fablab.py  QRcode_fablab.py  led_7segment_fablab.py  sparkplug_fablab.py
FABLABLIB_PYTHON/fablablib_python_ver1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
