[metadata]
name = fablablib_python_ver1
version = 0.0.1
author = 78-quangSky
author_email = dangquang02530@gmail.com
description = For generating necessary modules fof FABLAB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/78-quangSky/fablablib_python_ver1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True